fix: scrollbar 수정

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -18,4 +18,30 @@
   .product_container {
     gap: 2.5vw !important;
   }
+
+  .mob_button {
+    // width: 63px;
+    height: 25px;
+    padding: 5px 10px !important;
+  }
+
+  .scroll-bar::-webkit-scrollbar {
+    width: 3px;
+    height: 3px;
+    margin-top: 3px;
+  }
+
+  .scroll-bar::-webkit-scrollbar-thumb {
+    background-color: #2f3542;
+    border-radius: 10px;
+    height: 3px;
+  }
+
+  .scroll-bar::-webkit-scrollbar-track {
+    width: 3px;
+    height: 95%;
+    background-color: grey;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 5px white;
+  }
 }
